--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
   </head>
 
   <body>
+    <header> <%= render 'pages/navbar'%></header>
     <%= yield %>
+    <footer> <%= render 'pages/footer'%></footer>
   </body>
 </html>
