--- a/app/views/curriculum/index.html.erb
+++ b/app/views/curriculum/index.html.erb
@@ -33,8 +33,8 @@
 <div class="container-curriculum">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
-      <%= image_tag 'CV_TFD_Alternance.png', class: "CV-img"%>
-      <button class="btn"> <a href="CV_TFD_Alternance.pdf" download="CV_TFD" id="font-cv">Télécharger le CV en version PDF </a></button>
+      <%= image_tag 'Curriculum.png', class: "CV-img"%>
+      <button class="btn"> <a href="Curriculum.pdf" download="CV_TFD" id="font-cv">Télécharger le CV en version PDF </a></button>
 
     </div>
   </div>
