--- a/app/views/educations/index.html.erb
+++ b/app/views/educations/index.html.erb
@@ -24,7 +24,7 @@
   </a>
 
 <div class="timeline">
-    <h1 class="heading">Educations & Experience</h1>
+    <h1 class="heading">Educations & Experiences</h1>
     <div class="card">
         <div class="card-body">
             <h1 class="card-title">Juillet 2021 - Mars 2021</h1>
@@ -75,5 +75,6 @@
             <ul>Communication orale et écrite </ul>
         </div>
     </div>
-
+      <a href="curriculum#index" id="neon-button-text"><span>Telecharger le CV</span></a>
+               </div>
 </div>
