--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <header> <%= render 'pages/navbar'%></header>
+    <header> <%= render 'pages/navbar'%>"</header>"
     <%= yield %>
     <footer> <%= render 'pages/footer'%></footer>
   </body>
