--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -42,7 +42,7 @@
   height:100px;
   bottom:0;
   width:100%;
-   padding:50px;
+   padding:35px;
 
 // height:50px;
   background-color: #002a38;
@@ -84,9 +84,9 @@
 }
 
 /* On screens that are 600px or less, set the background color to olive */
-@media screen and (max-width: 600px) {
-  body {
-    // background-color: olive;
-    // position: absolute;
-  }
-}
+// @media screen and (max-width: 600px) {
+//   body {
+//     // background-color: olive;
+//     // position: absolute;
+//   }
+// }
