--- a/app/assets/stylesheets/curriculum.scss
+++ b/app/assets/stylesheets/curriculum.scss
@@ -10,8 +10,9 @@
 
 }
 .CV-img{
-  width: auto;
-  height: auto;
+      width: 500px;
+    /* height: 600px; */
+    margin-left: 150px;
 }
 
 /////////
@@ -313,7 +314,7 @@ $cubic-bezier: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
         // /* Header */
         header {
-            padding: 30px 0;
+            // padding: 30px 0;
             text-align: left;
         }
         header h1.logo {
@@ -484,7 +485,7 @@ text-transform: uppercase;
     letter-spacing: 0.15em;
 
      margin: 50px;
-    margin-left: 15px;
+    // margin-left: 15px; G enlever pour l'alignmt
     padding: 1rem 2.5rem;
     background: transparent;
     outline: none;
@@ -493,7 +494,8 @@ text-transform: uppercase;
     transition: all 0.5s $cubic-bezier 0.15s;
   }
   .CV-img{
-    margin-top: 50px;
+        margin-left: 0px;
+    width: 400px;
   }
 }
 
