--- a/app/views/curriculum/index.html.erb
+++ b/app/views/curriculum/index.html.erb
@@ -1,28 +1,3 @@
-<%#
- <div class="container-curriculum">
-  <div class=" row justify-content-center col-6">
-    <%= image_tag 'CV_TFD_Alternance.png', class: "CV-img"%>
-  <%# </div>
-</div>
-
-<div class="container-btn-cv">
-  <div class=" row justify-content-center col-12">
-    <button class="btn"> <a href="CV_TFD_Alternance.pdf" download="CV_TFD" id="font-cv">Télécharger le CV en version PDF </a></button>
-  </div>
-</div>  %>
-
-
-<%# <div class="container-curriculum">
-  <div class="row">
-
-    <div class="col-12 col-lg-8">
-     <%= image_tag 'CV_TFD_Alternance.png', class: "CV-img"%>
-    <%# </div>
-
-    <div class="col-12 col-lg-4">
-    <button class="btn"> <a href="CV_TFD_Alternance.pdf" download="CV_TFD" id="font-cv">Télécharger le CV en version PDF </a></button>
-
-    </div>  %>
 
 
 <a href="educations#index"> <span class="hero__scroll_left">
@@ -33,8 +8,8 @@
 <div class="container-curriculum">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-8">
-      <%= image_tag 'Curriculum.png', class: "CV-img"%>
-      <button class="btn"> <a href="Curriculum.pdf" download="CV_TFD" id="font-cv">Télécharger le CV en version PDF </a></button>
+      <%= image_tag 'CV_TFD.png', class: "CV-img"%>
+      <button class="btn"> <a href='https://drive.google.com/file/d/1X1oBYa5hja8svPgaz4P8xe8ZhX-l3uTu/view?usp=sharing' download='CV_TFD.png' id="font-cv">  Télécharger le CV en version PDF  </a></button>
 
     </div>
   </div>
