--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -1,65 +1,26 @@
 
+      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+      <input type="checkbox" id="active-navbar">
+      <label for="active-navbar" class="menu-btn"><i class="fas fa-bars"></i></label>
+      <div class="wrapper-navbar">
+         <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="educations#index">Educations</a></li>
+            <li><a href="curriculum#index">Curriculum</a></li>
+         </ul>
+      </div>
+        <%# <div class="content-navbar">
+         <div class="title">
+            blabla
+         </div>
+         <p>
+            using only HTML & CSS
+         </p>
+      </div> %>
+   </body>
 
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,600;0,700;0,900;1,400;1,600;1,700&display=swap" rel="stylesheet" />
-<script defer src="./dist/SwupOverlayTheme.js">
-const swup = new Swup({
-  plugins: [new SwupOverlayTheme()]
-});
-
-new SwupOverlayTheme({
-  color: '#2D2E82',
-  duration: 600,
-  direction: 'to-right',
-});
-
-<div id="swup" class="transition-fade"></div>
-</script>
-
-
-
-		<div class="container-navbar">
-			<nav>
-
-           <a href="/">Home</a>
-           <a href="educations#index"  class="transition-left" >Education & Experience</a>
-            <%# <%= link_to "Education&Experience" , education_path class="transition-left" %>
-           <%# <a href="competences#index">Compétence</a> %>
-          <a href="curriculum#index">Curriculum</a>
-       </div>
-       <div class="transition-wipe"></div>
-			</nav>
-			<button class="hamburger">
-				<div class="bar"></div>
-			</button>
-		</div>
-
-	<nav class="mobile-nav">
-		<a href="/">Home</a>
-		<a href="educations#index" >Educations & Experiences  </a>
-		<%# <a href="competences#index">Compétences</a> %>
-		<a href=' curriculum#index' >Curriculum</a>
-	</nav>
-	<main>
-
-
-
-<script >
-    window.onload = function () {
-    window.addEventListener('scroll', function (e) {
-      if (window.pageYOffset > 100) {
-        document.querySelector("header").classList.add('is-scrolling');
-      } else {
-        document.querySelector("header").classList.remove('is-scrolling');
-      }
-    });
-
-    const menu_btn = document.querySelector('.hamburger');
-    const mobile_menu = document.querySelector('.mobile-nav');
-
-    menu_btn.addEventListener('click', function () {
-      menu_btn.classList.toggle('is-active');
-      mobile_menu.classList.toggle('is-active');
-    });
-  }
- </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
